<resources>
    <string name="app_name">AsreZolur</string>

    <string name="action_bookmark">نشان گذاری</string>
    <string name="action_index">فهرست</string>
    <string name="action_goToBookmark">رفتن به نشانه</string>
    <string name="action_rate">نظر به برنامه</string>
    <string name="action_aboutus">درباره ما</string>
    <string name="action_exit">خروج</string>

    <string name="title_activity_main">عصر ظهور</string>
    <string name="errorInLoadData">خطا در بارگذاری اطلاعات</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
