<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_border_white_36dp"
        android:orderInCategory="1"
        android:title="@string/action_bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_zoomIn"
        android:icon="@drawable/ic_zoom_in_white_36dp"
        android:orderInCategory="2"
        android:title="بزرگ نمایی"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_zoomOut"
        android:icon="@drawable/ic_zoom_out_white_36dp"
        android:orderInCategory="3"
        android:title="کوچک نمایی"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_index"
        android:orderInCategory="4"
        android:title="@string/action_index"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_goToBookmark"
        android:orderInCategory="5"
        android:title="@string/action_goToBookmark"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="6"
        android:title="@string/action_rate"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="7"
        android:title="@string/action_aboutus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="8"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
